--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm install; npm run build",
-    "start": "node index.js"
+    "start": "npm run start"
   },
   "keywords": [],
   "author": "",
